app/kubernetes/deployment-base.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-deployment
  namespace: java-app
  labels:
    app: challenge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: challenge
  template:
    metadata:
      labels:
        app: challenge
    spec:
      containers:
        - name: challenge-container
          image: nurbolm/java_app_slim:v0.1.0
          ports:
            - containerPort: 8080
