app/kubernetes/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-deployment
  namespace: java-app
  labels:
    app: challenge
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2  # Allows up to 2 pods to be unavailable during the update
      maxSurge: 2        # Allows up to 2 additional pods during the update
  selector:
    matchLabels:
      app: challenge
  template:
    metadata:
      labels:
        app: challenge
    spec:
      containers:
        - name: challenge-container
          image: nurbolm/java_app_new:v0.1.0
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - name: persistent-storage
              mountPath: /app/data
          resources:
            requests:
              memory: "512Mi"  # Minimum amount of memory the container is guaranteed
              cpu: "250m"      # Minimum amount of CPU the container is guaranteed
            limits:
              memory: "1Gi"    # Maximum amount of memory the container can use
              cpu: "500m"      # Maximum amount of CPU the container can use
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: challenge-pvc
