app/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: challenge-service
  namespace: java-app
spec:
  selector:
    app: challenge
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
